Travel::Status::DE::IRIS 1.10 - Sat Oct 01 2016

    * Add qos code 71 ("WLAN in einzelnen Wagen nicht verfügbar")
    * Fix DS100 codes for "Geilenkirchen" and "Montabaur"
    * Travel::Status::DE::IRIS::Stations::get_station: Add support for
      UIC / EVA numbers

Travel::Status::DE::IRIS 1.09 - Mon Jun 27 2016

    * Travel::Status::DE::IRIS::Result: Fix ->classes accessor
      (returned a string instead of a list)
    * Fix DS100 codes for "Stuttgart Hbf (tief)" and "Stuttgart-Feuerbach"


Travel::Status::DE::IRIS 1.08 - Thu Jun 09 2016

    * New dependency: Geo::Distance
    * Update DS100 code list. Station names are now unabbreviated, e.g.
      "Dortmund Univeristät" instead of "Do Universität". Also, stations
      without train service are no longer included. Note that this list might
      contain errors. If you get "Request error: Station ... has no associated
      timetable" for a station which worked with previous versions, please
      submit a bug report.
    * Travel::Status::DE::IRIS::Stations now also returns international
      station number, longitude and latitutde for most stations
    * New method Travel::Status::DE::IRIS::Stations::get_station_by_location
      allows station lookup by geolocation

Travel::Status::DE::IRIS 1.07 - Sun May 01 2016

    * Fix inefficient requests for stations with with heavily cross-referenced
      related-station tags (most notable example: München Hbf)

Travel::Status::DE::IRIS 1.06 - Mon Feb 29 2016

    * Partially fix slow response time and excessive network requests for
      stations with heavily cross-referenced related-station tags (most notable
      example: München Hbf). The implementation is still slightly inefficient
      in these cases, but far better than before -- A complete fix will follow
      in the next release. Note that db-iris calls using
      -x/--exact/--no-related are not affected by this issue.

Travel::Status::DE::IRIS 1.05 - Sun Dec 20 2015
