@@ -6,7 +6,7 @@ use utf8;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '1.10';
+our $VERSION = '1.11';
 
 use DateTime;
 use DateTime::Format::Strptime;
@@ -528,7 +528,7 @@ I<station>
 
 =head1 VERSION
 
-version 1.10
+version 1.11
 
 =head1 DESCRIPTION
 
